[gd_scene load_steps=11 format=2]

[ext_resource path="res://Graphics/Tilesets/GreenGoo/Goo2.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Tilesets/GreenGoo/Goo1.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Tilesets/GreenGoo/Goo3.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Tilesets/GreenGoo/Goo4.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Slime.gd" type="Script" id=14]
[ext_resource path="res://Sounds/Slime_death.wav" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.42297
height = 0.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.82957
height = 0.0

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 18.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.258824, 0.905882, 0.219608, 1 )

[node name="Slime" type="KinematicBody2D" groups=[
"Enemies",
]]
scale = Vector2( 4, 4 )
collision_layer = 2
collision_mask = 2147483650
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -6.61752 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.536647, 2.145 )
rotation = -1.57404
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( 0.296544, -3.95824 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0.21022, 6.41184 )
rotation = -1.59112
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 14
lifetime = 0.4
one_shot = true
process_material = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="Can_shoot" type="Timer" parent="."]
pause_mode = 1
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_HitBox_body_exited"]
[connection signal="timeout" from="Can_shoot" to="." method="_on_Can_shoot_timeout"]
